fix: Slightly increasing CSS spacing on timeline description items to make them more readable

--- a/src/app/components/common-lib/timeline/timeline.component.scss
+++ b/src/app/components/common-lib/timeline/timeline.component.scss
@@ -45,7 +45,7 @@
     font-size: 0.85rem;
     color: var(--primary-text-color);
     transition: all 2s ease-in-out;
-    margin: 2px 0px;
+    margin: 4px 0px;
 }
 .timeline-item-image {
     height: 40px;
